--- a/index.html
+++ b/index.html
@@ -9,5 +9,18 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script>
+      (function (w, d, u) {
+        var s = d.createElement("script")
+        s.async = true
+        s.src = u + "?" + ((Date.now() / 60000) | 0)
+        var h = d.getElementsByTagName("script")[0]
+        h.parentNode.insertBefore(s, h)
+      })(
+        window,
+        document,
+        "https://cdn-ru.bitrix24.ru/b28492848/crm/site_button/loader_1_v57jnc.js",
+      )
+    </script>
   </body>
 </html>
