--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
@@ -9,18 +9,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-    <script>
-      (function (w, d, u) {
-        var s = d.createElement("script")
-        s.async = true
-        s.src = u + "?" + ((Date.now() / 60000) | 0)
-        var h = d.getElementsByTagName("script")[0]
-        h.parentNode.insertBefore(s, h)
-      })(
-        window,
-        document,
-        "https://cdn-ru.bitrix24.ru/b28492848/crm/site_button/loader_1_v57jnc.js",
-      )
-    </script>
   </body>
 </html>
